# opn

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
cmake/: config.cmake
lib/ymfm/: CMakeLists.txt
res/img/: CMakeLists.txt  algorithm.drawio
src/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  action.h  apvts_attachment.h  controller.cpp  controller.h  model.cpp  model.h  parameter_change_queue.cpp  parameter_change_queue.h  plugin_editor.cpp  plugin_editor.h  plugin_processor.cpp  plugin_processor.h  ranged_value.h  reducer.cpp  reducer.h  state.h  store.h  toggled_value.h  util.h
src/audio/: fm_audio_source.cpp  fm_audio_source.h  fm_changer.cpp  fm_changer.h  keyboard.cpp  keyboard.h  note.h  parameter.cpp  parameter.h  pitch_util.h  register.h
src/audio/parameter/: parameter.cpp  parameter.h  parameter_change_queue.cpp  parameter_change_queue.h
src/ui/: algorithm_graph.cpp  algorithm_graph.h  animated_toggle_button.cpp  animated_toggle_button.h  attached_component.h  colour.h  envelope_graph.cpp  envelope_graph.h  fm_operator_parameters_tab_content.cpp  fm_operator_parameters_tab_content.h  fm_operator_parameters_tabbed_component.cpp  fm_operator_parameters_tabbed_component.h  nestable_grid.cpp  nestable_grid.h  view_message.h
